Extract scss into separate files and update db

--- a/src/sass/core/krew.scss
+++ b/src/sass/core/krew.scss
@@ -1,436 +1,13 @@
 @import './variables';
-
-#map {
-	height: 100%;
-}
-
-.bk-container {
-	display: flex;
-	flex-direction: column;
-	height: 100%;
-}
-
-.bk-heading-container {
-	width: 100%;
-	height: $heading-container-height;
-	position: fixed;
-	top: 0;
-	z-index: 2;
-	background-color: $header-background-color;
-
-	.bk-heading {
-		display: flex;
-		flex-direction: row;
-		height: 100%;
-
-		.bk-heading-item {
-			flex-grow: 1;
-			flex-basis: 0;
-			display: flex;
-			flex-direction: column;
-			justify-content: center;
-
-			&:first-child {
-				margin: $heading-item-first;
-			}
-
-			&:last-child {
-				margin: $heading-item-second;
-			}
-
-			.bk-header {
-				text-align: center;
-			}
-		}
-	}
-
-	+ .bk-sections-container {
-		top: $heading-container-height;;
-	}
-}
-
-.bk-button-icon {
-	font-size: $bk-button-icon-font-size;
-	width: $button-icon-size;
-	height: $button-icon-size;
-	cursor: pointer;
-
-	&.bk-active, &:hover, &:focus, &:active {
-		.bk-icon {
-			color: $focus-color;
-		}
-	}
-	
-	&.bk-button-disabled {
-		.bk-icon {
-			color: $button-disabled-color;
-		}
-	}
-}
-
-.bk-button {
-	background: none;
-	border: none;
-	padding: 0;
-	margin: 0;
-	border-radius: $button-border-radius;
-
-	&:hover, &:focus, &:active {
-		background-color: $base-hover-color;
-	}
-}
-
-.bk-link {
-	color: $base-color;
-	cursor: pointer;
-
-	&:hover, &:focus, &:active {
-		color: $focus-color;
-
-		.bk-icon {
-			color: $focus-color;
-		}
-	}
-}
-
-.bk-nav-container {
-	bottom: 0px;
-	position: relative;
-
-	.bk-nav-control {
-		position: relative;
-
-		& + .bk-nav {
-			position: absolute;
-
-			&.bk-nav-hidden {
-				display: none;
-			}
-
-			.bk-nav-list {
-				display: flex;
-				flex-direction: column;
-				background-color: $nav-list-background-color;
-				padding: 0px;
-				width: $bk-nav-list-width;
-				box-shadow: 0 1px 2px rgba(0,0,0,0.15);
-				margin: 0;
-			
-				.bk-nav-list-item {
-					height: 35px;
-					display: flex;
-
-					&:last-child {
-						border-bottom: none;
-					}
-
-					a {
-						padding: 10px;
-						width: 100%;
-					}
-				}
-			}
-		}
-	}
-}
-
-.bk-search-container {
-	display: flex;
-	justify-content: flex-end;
-
-	input {
-		border: none;
-		padding: 0px;
-		margin: 10px 0px 10px 5px;
-		width: $search-field-width;
-		border-bottom: 1px solid $base-color;
-		background-color: $header-background-color;
-
-		&.bk-search-expand-animation {
-			width: 0px;
-			transition: width 0.5s ease-in-out;
-		}
-
-		&.bk-search-expanded {
-			width: $search-field-width;
-		}
-
-		&:focus, &:active {
-			background-color: $base-hover-color;
-			border-bottom-color: $focus-color;
-		}
-	}
-}
-
-.bk-search-result-dropdown-container {
-	position: absolute;
-    top: 75px;
-	max-height: 400px;
-	max-width: 300px;
-	overflow: scroll;
-	box-shadow: 0 1px 2px rgba(0,0,0,0.15);
-
-	.bk-search-results {
-		padding: 10px;
-		margin: 0;
-		background-color: #fdfdfd;
-
-		.bk-search-result {
-			padding: 10px 10px 0px 10px;
-
-			&:hover {
-				background-color: $base-hover-color;
-			}
-
-			.bk-search-result-container {
-				padding-bottom: 10px;
-	
-				p {
-					margin: 5px;
-
-					&:last-child {
-						opacity: .75;
-					}
-				}
-			}
-		}
-	}
-}
-
-.bk-map-buttons {
-    position: absolute;
-    z-index: 1;
-    bottom: 20px;
-    width: 100%;
-    display: flex;
-	justify-content: center;
-
-	.bk-down-link {
-		border-radius: 25px;
-		background-color: $header-background-color;
-		justify-content: center;
-		flex-direction: row;
-		display: flex;	
-		box-shadow: 0 1px 2px rgba(0,0,0,0.15);
-
-		a {
-			cursor: pointer;
-			display: flex;
-			text-align: center;
-			flex-direction: column;
-			justify-content: center;
-			letter-spacing: 0em;
-		}
-
-	}
-}
-
-.bk-sections-container {
-	position: relative;
-	width: 100%;
-	display: flex;
-	flex-direction: column;
-
-	.bk-section {
-		position: relative;
-		height: 500px;
-	}
-}
-
-.bk-transform-reverse {
-	transition: transform 0.5s ease-in-out;
-}
-
-.bk-reverse {
-	transform: rotate(180deg);
-}
-
-.bk-cards-container {
-	display: flex;
-
-	.bk-cards-row {
-		display: flex;
-		width: 100%;
-		flex-wrap: wrap;
-		padding: 10px;
-
-		.bk-card-container {
-			width: 20%;
-			height: 200px;
-			margin: 0;
-
-			.bk-card {
-				width: 100%;
-				outline: none;
-				border: none;
-				font-size: 1em;
-				padding: 10px;
-				height: 100%;
-				display: block;
-				background: none;
-				cursor: pointer;
-				box-sizing: border-box;
-				text-align: center;
-
-				&:hover, &:focus, &:active {
-					background-color: $base-hover-color;
-					.bk-icon, p, strong {
-						color: $focus-color;
-					}
-				}
-
-				.bk-card-info {
-					height: 80%;
-					display: flex;
-					flex-direction: column;
-					justify-content: center;
-
-					p {
-						margin-top: 0;
-						margin-bottom: 5px;
-						&:last-child {
-							margin-bottom: 0;
-						}
-					}
-
-					.bk-icon {
-						font-size: inherit;
-					}
-				}
-
-				.bk-card-status {
-					height: 20%;
-					display: flex;
-					flex-direction: column;
-					justify-content: center;
-
-					.bk-icon {
-						font-size: 2em;
-					}
-				}
-			}
-		}
-	}
-}
-
-.bk-pagination-controls-container {
-	.bk-pagination-controls {
-		display: flex;
-		flex-direction: row;
-		justify-content: center;
-
-		.bk-control-back {
-			margin-right: 5px;
-		}
-
-		.bk-control-pages {
-			margin: 0px 5px 0px 5px;
-			display: flex;
-    		flex-direction: column;
-    		justify-content: center;
-			height: 40px;
-			
-			span {
-				text-align: center;
-				
-				span {
-					margin: 0px 10px 0px 10px;
-				}
-
-				&.bk-control-page-active {
-					color: $focus-color;
-				}
-			}
-		}
-
-		.bk-control-forward {
-			margin-left: 5px;
-		}
-	}
-}
-
-.bk-conquerors-container {
-    display: flex;
-    flex-direction: row;
-	flex-wrap: wrap;
-	padding: 15px;
-	height: 100%;
-	justify-content: center;
-
-	.bk-conqueror-container {
-		width: 200px;
-		height: 200px;
-		display: flex;
-		flex-direction: column;
-		justify-content: center;
-
-		.bk-conqueror-img-container {
-			text-align: center;
-			display: flex;
-			flex-direction: row;
-			justify-content: center;
-
-			.bk-conqueror-img {
-				display: flex;
-				justify-content: center;
-				height: $conqueror-image-size;
-				width: $conqueror-image-size;
-				display: flex;
-				flex-direction: column;
-				justify-content: center;
-				background-color: $base-hover-color;
-				border-radius: 50px;
-				overflow: hidden;
-
-				.bk-conqueror-initials {
-					font-size: 1.75em;
-					letter-spacing: 0em;
-				}
-			}
-		}
-	
-		.bk-conqueror-name {
-			text-align: center;
-			font-size: 1.25em;
-		}
-	}
-}
-
-.bk-sortby-buttons-container {
-    padding-top: 5px;
-    display: flex;
-	justify-content: center;
-	
-	.bk-sortby-button {
-		margin: 0px 5px;
-	}
-}
-
-.bk-loading {
-	padding: 20px;
-	text-align: center;
-	
-	i {
-		color: $focus-color;
-	}
-
-	&.bk-loading-md {
-		font-size: 7.5em;
-	}
-}
-
-.bk-action-button {
-	height: 2.5em;
-    width: 8em;
-    background-color: transparent;
-    border: 1px solid $focus-color;
-	border-radius: 5px;
-	
-	&:hover, &:active, &:focus {
-		background-color: $focus-color;
-		color: $header-background-color;
-	}
-}
+@import './base';
+@import './button';
+@import './cards';
+@import './conqueror';
+@import './container';
+@import './icon';
+@import './link';
+@import './nav';
+@import './search';
 
 //@media all and (max-width: 1280px) {}
 //@media all and (max-width: 980px) { ... }
