--- a/src/sass/core/krew.scss
+++ b/src/sass/core/krew.scss
@@ -1,5 +1,5 @@
 @import './variables';
-@import './base';
+@import './global';
 @import './button';
 @import './cards';
 @import './conqueror';
@@ -12,118 +12,3 @@
 //@media all and (max-width: 1280px) {}
 //@media all and (max-width: 980px) { ... }
 //@media all and (max-width: 736px) {}
-
-@media all and (max-width: 480px) {
-	.bk-button-icon {
-		width: 1.75em;
-		height: 1.75em;
-	}
-
-	.bk-search-container input {
-		width: 100px;
-		margin: 0px 0px 0px 5px;
-
-		&.bk-search-expanded {
-			width: 100px;
-		}		
-	}
-	
-	h1 {
-		font-size: 1em;
-		letter-spacing: 0.5em;
-	}
-
-	a, p, input {
-		font-size: 0.75em;
-	}
-
-	a, p {
-		letter-spacing: 0.15em;
-	}
-
-	.bk-sections-container {	
-		.bk-section:nth-child(2) {
-			height: 600px;
-		}
-	}
-
-	.bk-heading-container {
-		.bk-heading {
-			.bk-heading-item {
-				&:first-child {
-					margin: 0px 0px 0px 10px
-				}
-	
-				&:last-child {
-					margin: 0px 10px 0px 0px;
-				}
-			}
-		}
-
-		+ .bk-sections-container {
-			top: 75px;
-		}
-	}
-
-	.bk-button-icon {
-		font-size: 1.25em;
-	}
-
-	.bk-nav-list {
-		width: 175px;
-	}
-
-	.bk-cards-container {
-		padding: 5px;
-		.bk-cards-row {
-			padding: 5px;
-			.bk-card-container {
-				width: 50%;
-				height: 100px;
-	
-				.bk-card {
-					padding: 5px;
-					font-size: 0.5em;
-
-					.bk-card-info {
-						p {
-							margin-bottom: 1px;
-						}
-					}
-				}
-			}
-		}
-	}
-	
-	.bk-conquerors-container {
-		padding: 5px;
-
-		.bk-conqueror-container {
-			width: auto;
-			height: auto;
-			flex-grow: 1;
-	
-			.bk-conqueror-img-container {
-				.bk-conqueror-img {
-					height: 50px;
-					width: 50px;
-					border-radius: 25px;
-
-					.bk-conqueror-initials{
-						font-size: 1em;
-						letter-spacing: 0em;
-					}
-				}
-			}
-		
-			.bk-conqueror-name {
-				text-align: center;
-				font-size: 0.75em;
-				
-				p {
-					letter-spacing: 0.25em;
-				}
-			}
-		}
-	}
-}
