--- a/src/sass/core/button.scss
+++ b/src/sass/core/button.scss
@@ -4,7 +4,7 @@
 	padding: 0;
 	margin: 0;
 	border-radius: $button-border-radius;
-	transition: all .3s ease;
+	transition: $bk-transition;
 
 	&:hover, &:focus, &:active {
 		background-color: $base-hover-color;
@@ -16,7 +16,7 @@
 	width: $button-icon-size;
 	height: $button-icon-size;
 	cursor: pointer;
-	transition: all .3s ease;
+	transition: $bk-transition;
 
 	&.bk-active, &:hover, &:focus, &:active {
 		.bk-icon {
@@ -46,7 +46,7 @@
 		flex-direction: row;
 		display: flex;	
 		box-shadow: 0 1px 2px rgba(0,0,0,0.15);
-		transition: transform 0.5s ease-in-out;
+		transition: $bk-transition;
 
 
 		a {
@@ -67,7 +67,7 @@
     background-color: transparent;
     border: 1px solid $focus-color;
 	border-radius: 5px;
-	transition: all .3s ease;
+	transition: $bk-transition;
 
 	&:hover, &:active, &:focus {
 		background-color: $focus-color;
@@ -82,5 +82,17 @@
 	
 	.bk-sortby-button {
 		margin: 0px 5px;
+	}
+}
+
+
+@media all and (max-width: 480px) {
+	.bk-button-icon {
+		width: 1.75em;
+		height: 1.75em;
+	}
+
+	.bk-button-icon {
+		font-size: 1.25em;
 	}
 }
