--- a/src/sass/core/conqueror.scss
+++ b/src/sass/core/conqueror.scss
@@ -7,8 +7,8 @@
 	justify-content: center;
 
 	.bk-conqueror-container {
-		width: 200px;
-		height: 200px;
+		width: $bk-conqueror-container-width;
+		height: $bk-conqueror-container-height;
 		display: flex;
 		flex-direction: column;
 		justify-content: center;
@@ -41,6 +41,40 @@
 		.bk-conqueror-name {
 			text-align: center;
 			font-size: 1.25em;
+		}
+	}
+}
+
+@media all and (max-width: 480px) {
+	.bk-conquerors-container {
+		padding: 5px;
+
+		.bk-conqueror-container {
+			width: auto;
+			height: auto;
+			flex-grow: 1;
+	
+			.bk-conqueror-img-container {
+				.bk-conqueror-img {
+					height: 50px;
+					width: 50px;
+					border-radius: 25px;
+
+					.bk-conqueror-initials{
+						font-size: 1em;
+						letter-spacing: 0em;
+					}
+				}
+			}
+		
+			.bk-conqueror-name {
+				text-align: center;
+				font-size: 0.75em;
+				
+				p {
+					letter-spacing: 0.25em;
+				}
+			}
 		}
 	}
 }
