--- a/src/sass/core/global.scss
+++ b/src/sass/core/global.scss
@@ -1,10 +1,29 @@
-@import './variables';
-
 html, body {
     height: 100%;
     margin: 0;
     padding: 0;
     overflow-y: scroll;
+}
+
+.bk-loading {
+	padding: 20px;
+	text-align: center;
+	
+	i {
+		color: $focus-color;
+	}
+
+	&.bk-loading-md {
+		font-size: 7.5em;
+	}
+}
+
+#map {
+	height: 100%;
+}
+
+a, p {
+    letter-spacing: $text-letter-spacing;
 }
 
 button, a, input {
@@ -30,4 +49,20 @@ h1 {
 
 a, p, input {
     font-size: $basic-text-font-size;
+}
+
+@media all and (max-width: 480px) {
+	
+	h1 {
+		font-size: 1em;
+		letter-spacing: 0.5em;
+	}
+
+	a, p, input {
+		font-size: 0.75em;
+	}
+
+	a, p {
+		letter-spacing: 0.15em;
+	}
 }
