--- a/src/sass/core/icon.scss
+++ b/src/sass/core/icon.scss
@@ -1,5 +1,5 @@
 .bk-icon {
-	transition: transform 0.5s ease-in-out;
+	transition: $bk-transition;
 
 	&.bk-icon-reverse {
 		transform: rotate(180deg);
