--- a/src/sass/core/variables.scss
+++ b/src/sass/core/variables.scss
@@ -2,13 +2,13 @@ $base-hover-color: #cacaca40;
 $base-color: #212121;
 $focus-color: #2196F3;
 
+
+$bk-transition: all 0.3s ease;
+
 $nav-list-background-color: #ffffff;
 $border-color: #dadada;
 $header-background-color: #fdfdfd;
-$button-disabled-color: #2121213b;
 
-$button-icon-size: 2em;
-$button-border-radius: 20px;
 $search-field-width: 250px;
 $conqueror-image-size: 100px;
 
@@ -24,5 +24,28 @@ $heading-item-first: 0px 0px 0px 30px;
 $heading-item-second: 0px 30px 0px 0px;
 
 $heading-container-height: 75px;
-$bk-button-icon-font-size: 1.25em;
 $bk-nav-list-width: 250px;
+
+
+/*****************
+ *	Buttons
+/*****************/
+
+$button-icon-size: 2em;
+$button-border-radius: 20px;
+$button-disabled-color: #2121213b;
+$bk-button-icon-font-size: 1.25em;
+
+/*****************
+ *	Cards
+/*****************/
+
+$bk-card-width: 200px;
+$bk-card-container-height: 200px;
+
+/*****************
+ *	Conqueror
+/*****************/
+
+$bk-conqueror-container-height: 200px;
+$bk-conqueror-container-width: 200px;
