--- a/src/sass/core/variables.scss
+++ b/src/sass/core/variables.scss
@@ -1,11 +1,11 @@
-$base-hover-color: #cacaca40;
+$base-hover-color: rgba(#cacaca, 0.25);
 $base-color: #212121;
 $focus-color: #2196F3;
 
 $nav-list-background-color: #ffffff;
 $border-color: #dadada;
 $header-background-color: #fdfdfd;
-$button-disabled-color: #2121213b;
+$button-disabled-color: rgba(#212121, 0.23);
 
 $button-icon-size: 2em;
 $button-border-radius: 20px;
