Break down npm scripts and update menu link

--- a/src/sass/font/font.scss
+++ b/src/sass/font/font.scss
@@ -3,7 +3,7 @@
 /* Set global font-family */
 @font-face {
     font-family: NotoSans;
-    src: url(./NotoSans-Regular.ttf);
+    src: url(./font/NotoSans-Regular.ttf);
 }
 
 * {
