--- a/src/sass/core/search.scss
+++ b/src/sass/core/search.scss
@@ -9,7 +9,7 @@
 			margin: 10px 0px 10px 5px;
 			width: $search-field-width;
 			border-bottom: 1px solid $base-color;
-			background-color: $header-background-color;
+			background-color: $base-background-color;
 
 			&.bk-search-expand-animation {
 				width: 0px;
