--- a/src/sass/core/variables.scss
+++ b/src/sass/core/variables.scss
@@ -2,9 +2,8 @@ $base-hover-color: rgba(#cacaca, 0.25);
 $base-color: #212121;
 $focus-color: #0070F0;
 
-$nav-list-background-color: #ffffff;
 $border-color: #dadada;
-$header-background-color: #fdfdfd;
+$base-background-color: #fdfdfd;
 $button-disabled-color: rgba(#212121, 0.23);
 
 $button-icon-size: 2em;
