--- a/src/sass/core/container.scss
+++ b/src/sass/core/container.scss
@@ -1,7 +1,6 @@
 .bk-container {
 	display: flex;
 	flex-direction: column;
-	height: 100%;
 }
 
 .bk-heading-container {
@@ -10,7 +9,7 @@
 	position: fixed;
 	top: 0;
 	z-index: 2;
-	background-color: $header-background-color;
+	background-color: $base-background-color;
 
 	.bk-heading {
 		display: flex;
@@ -51,6 +50,6 @@
 
 	.bk-section {
 		position: relative;
-		height: 500px;
+		height: 525px;
 	}
 }
