--- a/src/sass/core/nav.scss
+++ b/src/sass/core/nav.scss
@@ -15,7 +15,7 @@
 			.bk-nav-list {
 				display: flex;
 				flex-direction: column;
-				background-color: $nav-list-background-color;
+				background-color: $base-background-color;
 				padding: 0px;
 				width: $bk-nav-list-width;
 				box-shadow: 0 1px 2px rgba(0,0,0,0.15);
