--- a/src/sass/core/krew.scss
+++ b/src/sass/core/krew.scss
@@ -102,6 +102,7 @@
 			width: auto;
 			height: auto;
 			flex-grow: 1;
+			flex-basis: 100px;
 	
 			.bk-conqueror-img-container {
 				.bk-conqueror-img {
