--- a/src/sass/core/conqueror.scss
+++ b/src/sass/core/conqueror.scss
@@ -9,7 +9,7 @@
 		width: auto;
 		height: auto;
 		display: flex;
-		flex-basis: 300px;
+		flex-basis: 25%;
 		padding-bottom: 10px;
 		flex-direction: column;
 		justify-content: center;
