--- a/src/sass/core/button.scss
+++ b/src/sass/core/button.scss
@@ -34,18 +34,18 @@
 .bk-map-buttons {
     position: absolute;
     z-index: 1;
-    bottom: 20px;
+    bottom: 1.25rem;
     width: 100%;
     display: flex;
 	justify-content: center;
 
 	.bk-down-link {
-		border-radius: 25px;
+		border-radius: 3.125rem;
 		background-color: $base-background-color;
 		justify-content: center;
 		flex-direction: row;
 		display: flex;	
-		box-shadow: 0 1px 2px rgba(0,0,0,0.15);
+		box-shadow: 0 0.0625rem 2px rgba(0,0,0,0.15);
 		transition: transform 0.5s ease-in-out;
 
 
@@ -55,32 +55,22 @@
 			text-align: center;
 			flex-direction: column;
 			justify-content: center;
-			letter-spacing: 0em;
+			letter-spacing: 0rem;
 		}
 
 	}
 }
 
 .bk-action-button {
-	height: 2.5em;
-    width: 8em;
+	height: $button-icon-size;
+    width: 8rem;
     background-color: transparent;
-    border: 1px solid $focus-color;
-	border-radius: 5px;
+    border: 0.0625rem solid $focus-color;
+	border-radius: 0.3125rem;
 	transition: all .3s ease;
 
 	&:hover, &:active, &:focus {
 		background-color: $focus-color;
 		color: $base-background-color;
-	}
-}
-
-.bk-sortby-buttons-container {
-    padding-top: 5px;
-    display: flex;
-	justify-content: center;
-	
-	.bk-sortby-button {
-		margin: 0px 5px;
 	}
 }
