--- a/src/sass/core/nav.scss
+++ b/src/sass/core/nav.scss
@@ -1,5 +1,5 @@
 .bk-nav-container {
-	bottom: 0px;
+	bottom: 0;
 	position: relative;
 
 	.bk-nav-control {
@@ -16,13 +16,13 @@
 				display: flex;
 				flex-direction: column;
 				background-color: $base-background-color;
-				padding: 0px;
+				padding: 0;
 				width: $bk-nav-list-width;
-				box-shadow: 0 1px 2px rgba(0,0,0,0.15);
+				box-shadow: 0 0.0625rem 2px rgba(0,0,0,0.15);
 				margin: 0;
 			
 				.bk-nav-list-item {
-					height: 35px;
+					height: 2.1875rem;
 					display: flex;
 
 					&:last-child {
@@ -30,8 +30,12 @@
 					}
 
 					a {
-						padding: 10px;
+						padding: 0.625rem;
 						width: 100%;
+
+						.bk-icon {
+							font-size: $basic-text-font-size;
+						}
 					}
 				}
 			}
