--- a/src/sass/core/search.scss
+++ b/src/sass/core/search.scss
@@ -5,14 +5,14 @@
 
 		input.bk-search-field {
 			border: none;
-			padding: 0px;
-			margin: 10px 0px 10px 5px;
+			padding: 0;
+			margin: 0.625rem 0 0.625rem 0.3125rem;
 			width: $search-field-width;
-			border-bottom: 1px solid $base-color;
+			border-bottom: 0.0625rem solid $base-color;
 			background-color: $base-background-color;
 
 			&.bk-search-expand-animation {
-				width: 0px;
+				width: 0;
 				transition: width .3s ease;
 			}
 
@@ -29,19 +29,19 @@
 
 	.bk-search-result-dropdown-container {
 		position: absolute;
-		top: 75px;
-		max-height: 400px;
-		max-width: 300px;
+		top: 4.6875rem;
+		height: 400px;
+		width: 300px;
 		overflow: scroll;
-		box-shadow: 0 1px 2px rgba(0,0,0,0.15);
+		box-shadow: 0 0.0625rem 2px rgba(0,0,0,0.15);
 
 		.bk-search-results {
-			padding: 10px;
+			padding: 0.625rem;
 			margin: 0;
 			background-color: #fdfdfd;
 
 			.bk-search-result {
-				padding: 10px 10px 0px 10px;
+				padding: 0.625rem 0.625rem 0 0.625rem;
 				transition: all .3s ease;
 
 				&:hover {
@@ -49,10 +49,10 @@
 				}
 
 				.bk-search-result-container {
-					padding-bottom: 10px;
+					padding-bottom: 0.625rem;
 		
 					p {
-						margin: 5px;
+						margin: 0.3125rem;
 
 						&:last-child {
 							opacity: .75;
