--- a/src/sass/core/conqueror.scss
+++ b/src/sass/core/conqueror.scss
@@ -2,17 +2,18 @@
     display: flex;
     flex-direction: row;
 	flex-wrap: wrap;
-	padding: 15px;
 	justify-content: center;
+	height: 100%;
+	flex-grow: 1;
 
 	.bk-conqueror-container {
 		width: auto;
 		height: auto;
 		display: flex;
 		flex-basis: 25%;
-		padding-bottom: 10px;
 		flex-direction: column;
-		justify-content: center;
+		flex-grow: 1;
+		justify-content: flex-start;
 
 		.bk-conqueror-img-container {
 			text-align: center;
@@ -23,25 +24,29 @@
 			.bk-conqueror-img {
 				display: flex;
 				justify-content: center;
+				flex-direction: column;
 				height: $conqueror-image-size;
 				width: $conqueror-image-size;
-				display: flex;
-				flex-direction: column;
-				justify-content: center;
 				background-color: $base-hover-color;
-				border-radius: 50px;
+				border-radius: 6.25rem;
 				overflow: hidden;
 
 				.bk-conqueror-initials {
-					font-size: 1.75em;
-					letter-spacing: 0em;
+					font-size: 1rem;
+					letter-spacing: 0rem;
+					text-overflow: ellipsis;
+					white-space: nowrap;
+					overflow: hidden;
 				}
 			}
 		}
 	
 		.bk-conqueror-name {
 			text-align: center;
-			font-size: 1.25em;
+			
+			p {
+				font-size: 0.75rem;
+			}
 		}
 	}
 }
