--- a/src/sass/core/container.scss
+++ b/src/sass/core/container.scss
@@ -38,7 +38,7 @@
 	}
 
 	+ .bk-sections-container {
-		top: $heading-container-height;;
+		top: $heading-container-height;
 	}
 }
 
@@ -48,8 +48,20 @@
 	display: flex;
 	flex-direction: column;
 
+	.bk-section:first-child {
+		margin-top: 0;
+		height: 35rem;
+	}
+
 	.bk-section {
+		margin-top: 0.3125rem;
 		position: relative;
-		height: 525px;
+		min-height: 35rem;
+		display: flex;
+		flex-direction: column;
+
+		> div[class*="container"] {
+			padding: 0.625rem;
+		}
 	}
 }
