--- a/src/sass/core/krew.scss
+++ b/src/sass/core/krew.scss
@@ -9,44 +9,31 @@
 @import './nav';
 @import './search';
 
-//@media all and (max-width: 1280px) {}
-//@media all and (max-width: 980px) { ... }
-//@media all and (max-width: 736px) {}
+//@media all and (width: 1280px) {}
+//@media all and (width: 980px) { ... }
+//@media all and (width: 736px) {}
 
 @media all and (max-width: 480px) {
-	.bk-button-icon {
-		width: 1.75em;
-		height: 1.75em;
-	}
-
-	.bk-search-container input {
-		width: 100px;
-		margin: 0px 0px 0px 5px;
+	.bk-search-container .bk-search-field-container input.bk-search-field {
+		width: 6.25rem;
+		margin: 0 0 0 0.3125rem;
 
 		&.bk-search-expanded {
-			width: 100px;
+			width: 6.25rem;
 		}		
 	}
 	
 	h1 {
-		font-size: 1em;
-		letter-spacing: 0.5em;
-	}
-
-	a, p, input {
-		font-size: 0.75em;
+		font-size: 1.5rem;
 	}
 
 	a, p {
-		letter-spacing: 0.15em;
+		letter-spacing: 0.15rem;
 	}
 
 	.bk-sections-container {	
 		.bk-section:nth-child(2) {
-			height: 700px;
-		}
-		.bk-section:last-child {
-			height: auto;
+			height: 70rem;
 		}
 	}
 
@@ -54,80 +41,32 @@
 		.bk-heading {
 			.bk-heading-item {
 				&:first-child {
-					margin: 0px 0px 0px 10px
+					margin: 0 0 0 0.625rem
 				}
 	
 				&:last-child {
-					margin: 0px 10px 0px 0px;
+					margin: 0 0.625rem 0 0;
 				}
 			}
 		}
-
-		+ .bk-sections-container {
-			top: 75px;
-		}
-	}
-
-	.bk-button-icon {
-		font-size: 1.25em;
-	}
-
-	.bk-nav-list {
-		width: 175px;
 	}
 
 	.bk-cards-container {
-		padding: 5px;
-		height: 600px;
-
 		.bk-cards-row {
-			padding: 5px;
 			grid-template-columns: repeat(2, 1fr);
 			grid-template-rows: repeat(5, 1fr);
-
-			.bk-card-container {
-				.bk-card {
-					padding: 5px;
-					font-size: 0.5em;
-
-					.bk-card-info {
-						p {
-							margin-bottom: 1px;
-						}
-					}
-				}
-			}
 		}
 	}
 	
 	.bk-conquerors-container {
-		padding: 5px;
-
 		.bk-conqueror-container {
-			width: auto;
-			height: auto;
-			flex-grow: 1;
-			flex-basis: 100px;
-	
+			flex-basis: 33%;
+
 			.bk-conqueror-img-container {
 				.bk-conqueror-img {
-					height: 50px;
-					width: 50px;
-					border-radius: 25px;
-
-					.bk-conqueror-initials{
-						font-size: 1em;
-						letter-spacing: 0em;
-					}
-				}
-			}
-		
-			.bk-conqueror-name {
-				text-align: center;
-				font-size: 0.75em;
-				
-				p {
-					letter-spacing: 0.25em;
+					height: 3.125rem;
+					width: 3.125rem;
+					border-radius: 1.5625rem;
 				}
 			}
 		}
