--- a/src/sass/core/variables.scss
+++ b/src/sass/core/variables.scss
@@ -6,22 +6,22 @@ $border-color: #dadada;
 $base-background-color: #fdfdfd;
 $button-disabled-color: rgba(#212121, 0.23);
 
-$button-icon-size: 2em;
-$button-border-radius: 20px;
-$search-field-width: 250px;
-$conqueror-image-size: 100px;
+$button-icon-size: 2.5rem;
+$button-border-radius: 1.25rem;
+$search-field-width: 15.625rem;
+$conqueror-image-size: 6.25rem;
 
 
-$h1-font-size: 2em;
-$h1-letter-spacing: 0.5em;
+$h1-font-size: 2rem;
+$h1-letter-spacing: 1rem;
 
-$basic-text-font-size: 0.75em;
+$basic-text-font-size: 0.75rem;
 
-$text-letter-spacing: 0.25em;
+$text-letter-spacing: 0.1875rem;
 
-$heading-item-first: 0px 0px 0px 30px;
-$heading-item-second: 0px 30px 0px 0px;
+$heading-item-first: 0 0 0 1.875rem;
+$heading-item-second: 0 1.875rem 0 0;
 
-$heading-container-height: 75px;
-$bk-button-icon-font-size: 1.25em;
-$bk-nav-list-width: 250px;
+$heading-container-height: 4.6875rem;
+$bk-button-icon-font-size: 1.25rem;
+$bk-nav-list-width: 15.625rem;
