--- a/src/sass/core/base.scss
+++ b/src/sass/core/base.scss
@@ -3,7 +3,7 @@
 	text-align: center;
 	
 	i {
-		color: $focus-color;
+		color: var(--main-focus-color);
 	}
 
 	&.bk-loading-md {
@@ -19,5 +19,5 @@ html, body {
     margin: 0;
     padding: 0;
     overflow-y: scroll;
-    height: 100%;
+	height: 100%;
 }
